tests/ui/proc-macro/illegal-proc-macro-derive-use.stderr
error: the `#[proc_macro_derive]` attribute is only usable with crates of the `proc-macro` crate type
  --> $DIR/illegal-proc-macro-derive-use.rs:3:1
   |
LL | #[proc_macro_derive(Foo)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[proc_macro_derive]` attribute cannot be used on structs
  --> $DIR/illegal-proc-macro-derive-use.rs:10:1
   |
LL | #[proc_macro_derive(Foo)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[proc_macro_derive]` can only be applied to functions

error: aborting due to 2 previous errors

